# SkySnowEngine

./: README.md
Sample/Android/app/: CMakeLists.txt  build.gradle
Sample/Android/app/src/androidTest/java/android/skysnow/com/myapplication/: ExampleInstrumentedTest.java
Sample/Android/app/src/main/: AndroidManifest.xml
Sample/Android/app/src/main/cpp/: SkySnowJni.cpp  native-lib.cpp
Sample/Android/app/src/main/java/android/skysnow/com/myapplication/: MainActivity.java  SkySnowNativeAPI.java
Sample/Android/app/src/main/java/android/skysnow/com/myapplication/SkySnowBase/: SkySnowNativeAPI.java  SkySnowRenderer.java  SkySnowView.java
Sample/Android/app/src/main/res/layout/: activity_main.xml
Sample/Android/app/src/test/java/android/skysnow/com/myapplication/: ExampleUnitTest.java
Sample/Android/gradle/wrapper/: gradle-wrapper.properties
Sample/IOS/: IOS.txt
SourceCode/: CMakeLists.txt  Object.h  test.h
SourceCode/SkySnow/: Context.cpp  Context.h  Object.cpp  Object.h  RenderEntry.cpp  RenderEntry.h  object.cpp
SourceCode/SkySnow/Application/: Application.cpp  Application.h  Engine.cpp  Engine.h
SourceCode/SkySnow/Core/: Thread.cpp  Thread.h  Variant.cpp  Variant.h  WorkQueue.h
SourceCode/SkySnow/Graphics/: Buffer.h  Common.h  Geometry.cpp  Geometry.h  Graphics.cpp  Graphics.h  GraphicsDefs.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Renderer.cpp  Renderer.h  SNObject.cpp  SNObject.h  ShaderVariation.cpp  ShaderVariation.h  Technique.cpp  Technique.h  Texture.h  Texture2D.h  TextureView.h  VertexBuffer.cpp  VertexBuffer.h
SourceCode/SkySnow/Graphics/gl/: Buffer.h  GLObject.cpp  GLObject.h  GL_Graphics.cpp  GL_GraphicsImpl.cpp  GL_GraphicsImpl.h  GL_IndexBuffer.cpp  GL_ShaderProgram.cpp  GL_ShaderProgram.h  GL_ShaderVariation.cpp  GL_Texture2D.cpp  GL_VertexBuffer.cpp
SourceCode/SkySnow/Input/: Data.cpp  Data.h  File.cpp  File.h
SourceCode/SkySnow/Math/: Rect.cpp  Rect.h  SNMath.h
SourceCode/SkySnow/Particle/: Particle.txt
SourceCode/SkySnow/Sample/: TestDemo.cpp  TestDemo.h
SourceCode/SkySnow/SkySnow2D/: Batch.cpp  Batch.h
doc/: readme.txt
